Paksaf Users View done

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha512-N5ywA0NRzXGsOLUXRDqCkhVqCkne3zPtIsEtU19mRcTh5c2CnVhfSedK7RW0IT+5APjQlcn8ERTtlhl77XnKLA==" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha512-xOdZjuzUoaie3EzcjPhdjPH10sCe6DdLhwzGGyMxQSznLVvM++bpz2jdXnCYvCZoqzcjYWK10dBz6zT0byfkzg==" crossorigin="" />
+
   </head>
   <body>
     <noscript>
